# PathTracer

./: .gitignore  Cargo.toml  README.md  image.exr
examples/: cdf_sampling.rs  cornell.rs  cylinder_caustics.rs  dof.rs  first_caustics.rs  function_approximation.rs  glass_ball.rs  image_example.rs  inverting_vectors.rs  mirrorbox.rs  nalgebra_example.rs  plane_example.rs  roughness_example.rs  simple_scene.rs  simple_transmission.rs  sphere.rs  sphere_example.rs  visible_aperture.rs
src/: aperture.rs  camera.rs  function_approximation.rs  lib.rs  material.rs  object.rs  ray.rs  render_buffer.rs  renderer.rs  scene.rs  shader.rs  shape.rs
src/renderer/: backward_renderer.rs  bdpt_renderer.rs  depth_renderer.rs  mod.rs  recursive_bdpt.rs  simple_renderer.rs
src/shape/: cuboid.rs  cylinder.rs  empty.rs  plane.rs  sphere.rs
